@@ -161,6 +161,8 @@ EXTRA_DIST = \
     test/conf/gpg_no_pw_hmac_access.conf \
     test/conf/gpg_no_pw_hmac_clientdir_access.conf \
     test/conf/gpg_no_pw_hmac_serverdir_access.conf \
+    test/conf/gpg_no_pw_fpr_access.conf \
+    test/conf/gpg_no_pw_bad_fpr_access.conf \
     test/conf/fwknoprc_gpg_invalid_exe \
     test/conf/fwknoprc_hmac_defaults \
     test/conf/fwknoprc_hmac_time_offset_mins \
