@@ -327,6 +327,8 @@ typedef struct acc_stanza
     unsigned char        gpg_allow_no_pw;
     char                *gpg_remote_id;
     acc_string_list_t   *gpg_remote_id_list;
+    char                *gpg_remote_fpr;
+    acc_string_list_t   *gpg_remote_fpr_list;
     time_t               access_expire_time;
     int                  expired;
     int                  encryption_mode;
