@@ -1,0 +1,6 @@
+SOURCE                      ANY
+FW_ACCESS_TIMEOUT           3
+GPG_HOME_DIR                conf/server-gpg-no-pw
+GPG_DECRYPT_ID              361BBAD4
+GPG_ALLOW_NO_PW             Y
+GPG_FINGERPRINT_ID          00CC95F05BC146B6AC4038C9E36F443C6A3FAD56
